@@ -1,6 +1,6 @@
-#	$OpenBSD: Makefile,v 1.54 2010/06/27 19:19:56 phessler Exp $
+#	$OpenBSD: Makefile,v 1.55 2010/08/31 12:24:25 djm Exp $
 
-REGRESS_TARGETS=	t1 t2 t3 t4 t5 t6 t7 t-exec
+REGRESS_TARGETS=	t1 t2 t3 t4 t5 t6 t7 t8 t9 t-exec
 tests:		$(REGRESS_TARGETS)
 
 # Interop tests are not run by default
@@ -61,6 +61,7 @@ INTEROP_TESTS=	putty-transfer putty-ciphers putty-kex conch-ciphers
 
 USER!=		id -un
 CLEANFILES=	t2.out t6.out1 t6.out2 t7.out t7.out.pub copy.1 copy.2 \
+		t8.out t8.out.pub t9.out t9.out.pub \
 		authorized_keys_${USER} known_hosts pidfile \
 		ssh_config sshd_config.orig ssh_proxy sshd_config sshd_proxy \
 		rsa.pub rsa rsa1.pub rsa1 host.rsa host.rsa1 \
